# apple-silicon-llm-stack

./: .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  Makefile  README.md  go.mod  go.sum
.cache/clangd/index/: buffer_pool.mm.67A218516724B14B.idx  device.mm.0FABD3DE0BC49ACB.idx  engine.h.B52065E5941F894F.idx  main.cpp.AED55B0B62C1CB95.idx  model_loader.cpp.83FB6B4A7F0A8333.idx
cmd/gateway/: main.go
docs/: ADR.md  ARCHITECTURE.md  DESIGN.md  TESTING.md
hardware-telemetry-ui/: AGENTS.md  Dockerfile  README.md  package-lock.json  package.json  vite.config.ts
hardware-telemetry-ui/docs/: ADR.md  ARCHITECTURE.md  DESIGN.md  TESTING.md
hardware-telemetry-ui/src/lib/components/: ChatWindow.svelte  ConnectionStatus.svelte  Gauge.svelte  MetricsChart.svelte
hardware-telemetry-ui/src/lib/stores/: telemetry.test.ts  telemetry.ts
hardware-telemetry-ui/src/routes/: +page.svelte
include/metal_inference/: engine.h  types.h
internal/cgobridge/: bridge.go
internal/config/: config.go  config_test.go
internal/handlers/: handlers.go
internal/middleware/: middleware.go
internal/model/: api.go  model.go  model_test.go
metal-inference-core/: .clang-tidy  .cursorrules  Makefile
metal-inference-core/.cache/clangd/index/: compute_pipeline.mm.A8317EC9E7EF692D.idx  engine.cpp.31D53593ABB0619F.idx  sampler.cpp.22DCB7ED80E44750.idx  types.h.CE8B36F71C8926B2.idx
metal-inference-core/benchmarks/: CMakeLists.txt
metal-inference-core/cmake/: CompilerWarnings.cmake  Sanitizers.cmake
metal-inference-core/docs/: ADR.md  DESIGN.md  TESTING.md
metal-inference-core/src/: CMakeLists.txt
metal-inference-core/src/core/: engine.cpp  sampler.cpp
metal-inference-core/src/metal/: buffer_pool.mm
metal-inference-core/tests/unit/: main.cpp  quantization_test.cpp
mlx-tuner/: .env.example  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  pyproject.toml
mlx-tuner/configs/: smollm_lora.yaml
mlx-tuner/docs/: DESIGN.md  TESTING.md
mlx-tuner/src/mlx_tuner/: __init__.py  config.py  protocols.py
mlx-tuner/src/mlx_tuner/cli/: __init__.py  __main__.py  convert.py  fuse.py  train.py
mlx-tuner/src/mlx_tuner/data/: __init__.py
mlx-tuner/src/mlx_tuner/training/: __init__.py  lora.py  trainer.py
mlx-tuner/src/mlx_tuner/utils/: __init__.py
mlx-tuner/tests/: test_config.py  test_loaders.py  test_lora.py
shaders/: matmul.metal
src/core/: engine.cpp  model_loader.cpp
src/metal/: buffer_pool.mm  compute_pipeline.mm  device.mm
src/mlx_tuner/: logging.py
src/mlx_tuner/convert/: __init__.py  gguf_converter.py
src/mlx_tuner/data/: loaders.py
src/mlx_tuner/training/: lora.py  trainer.py
src/mlx_tuner/utils/: checkpoint.py
src/quantization/: quantize.hpp
tests/: CMakeLists.txt  test_gguf.py
tools/: main.cpp
