[project]
name = "mlx-tuner"
version = "0.1.0"
description = "Advanced MLX fine-tuning repository for Apple Silicon"
requires-python = ">=3.11"
dependencies = [
    "mlx>=0.31.0",
    "mlx-lm>=0.31.0",
    "transformers>=4.40.0",
    "peft>=0.10.0",
    "hf-transfer>=0.1.0",
    "numpy>=1.26.0",
    "datasets>=2.18.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "pyright>=1.1.350",
    "pydantic-settings>=2.1.0",
    "structlog>=24.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mlx_tuner"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
